<resources>
    <string name="app_name">ProjetM1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guidelines">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, eros quis malesuada commodo, purus ex posuere arcu, vel interdum nisi turpis sit amet elit. Integer eget tellus quis nibh dapibus finibus ac nec lectus. Vivamus lacinia velit nec libero euismod, in bibendum erat iaculis. Nullam et lacinia justo, non faucibus eros. Etiam nec quam sed elit sagittis bibendum. Vestibulum vel libero eu mauris efficitur tincidunt eu nec ligula. Cras at euismod erat. Fusce viverra dapibus venenatis.</string>
    <string name="notification_channel_id">myCanal</string>
    <string name="notification_channel_title">myTitle</string>
    <string name="notification_channel_description">This is a test canal</string>
    <string name="login_label">Connexion</string>
    <string name="email_label">Email</string>
    <string name="password_label">Mot de passe</string>
    <string name="login_btn_label">Se connecter</string>
    <string name="sign_up_hint">Vous n\'avez pas de compte?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="register_label">Inscription</string>
    <string name="log_in_hint">Vous avez déjà un compte?</string>
    <string name="name_label">Nom</string>
    <string name="first_name_label">Prénom(s)</string>
    <string name="password_confirm_label">Confirmer le mot de passe</string>
    <string name="my_account">Mon compte</string>
    <string name="notification">Notifications</string>
    <string name="settings">Parametres</string>
    <string name="about_us">A propos</string>
    <string name="others">Autres</string>
    <string name="logout">Déconnexion</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="logout_label">Voulez-vous vraiment vous déconnecter ?</string>
</resources>