<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us" />
    </group>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/login_btn_label" />
        </menu>
    </item>
</menu>