<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_label"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/grey"
            android:textSize="12sp"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@color/crimson"
            android:layout_margin="8dp"/>

    </LinearLayout>

</LinearLayout>
