<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".vues.LoginActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="170dp"
        android:gravity="center"
        android:text="@string/login_label"
        android:textColor="@color/default_text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_layout"
        android:layout_below="@id/loginLabel"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/default_text"
            android:textColorHint="@color/default_text"
            tools:ignore="TextFields"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_layout"
        android:layout_below="@id/email_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/default_text"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext_background"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/default_text"
            android:textColorHint="@color/default_text"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/login_btn_label"
        android:background="@drawable/rounded_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/sign_up_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up_hint"
            android:textColor="@color/default_text"
            android:textSize="17sp"
            android:padding="5dp" />
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textSize="17sp"
            android:padding="5dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:indeterminateTint="@color/purple_200"/>

</RelativeLayout>